--- a/requirements.txt
+++ b/requirements.txt
@@ -305,6 +305,7 @@ rsa==4.7.2
 sacremoses==0.0.43
 scikit-image==0.16.2
 scikit-learn==0.22.2.post1
+scikit-multilearn==0.2.0
 scipy==1.4.1
 screen-resolution-extra==0.0.0
 scs==2.1.2
