--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ beautifulsoup4==4.6.3
 bleach==3.3.0
 blis==0.4.1
 bokeh==2.1.1
+boto3==1.17.28
+botocore==1.20.28
 Bottleneck==1.3.2
 branca==0.4.2
 bs4==0.0.1
@@ -36,6 +38,7 @@ cmake==3.12.0
 cmdstanpy==0.9.5
 colorlover==0.3.0
 community==1.0.0b1
+configparser==5.0.2
 contextlib2==0.5.5
 convertdate==2.3.1
 coverage==3.7.1
@@ -53,17 +56,18 @@ dask==2.12.0
 datascience==0.10.6
 debugpy==1.0.0
 decorator==4.4.2
-defusedxml==0.7.0
+defusedxml==0.7.1
 descartes==1.1.0
 dill==0.3.3
 distributed==1.25.3
 Django==3.1.7
 dlib==19.18.0
 dm-tree==0.1.5
+docker-pycreds==0.4.0
 docopt==0.6.2
 docutils==0.16
 dopamine-rl==1.0.5
-earthengine-api==0.1.254
+earthengine-api==0.1.255
 easydict==1.9
 ecos==2.0.7.post1
 editdistance==0.5.3
@@ -93,6 +97,8 @@ gensim==3.6.0
 geographiclib==1.50
 geopy==1.17.0
 gin-config==0.4.0
+gitdb==4.0.5
+GitPython==3.1.14
 glob2==0.7
 google==2.0.3
 google-api-core==1.26.1
@@ -119,6 +125,7 @@ gspread==3.0.1
 gspread-dataframe==3.0.8
 gym==0.17.3
 h5py==2.10.0
+hatespans==0.2.0
 HeapDict==1.0.1
 hijri-converter==2.1.1
 holidays==0.10.5.2
@@ -137,7 +144,7 @@ imagesize==1.2.0
 imbalanced-learn==0.4.3
 imblearn==0.0
 imgaug==0.2.9
-importlib-metadata==3.7.0
+importlib-metadata==3.7.2
 importlib-resources==5.1.2
 imutils==0.5.4
 inflect==2.1.0
@@ -150,12 +157,13 @@ ipython-genutils==0.2.0
 ipython-sql==0.3.9
 ipywidgets==7.6.3
 itsdangerous==1.1.0
-jax==0.2.9
-jaxlib==0.1.60+cuda110
+jax==0.2.10
+jaxlib==0.1.62+cuda110
 jdcal==1.4.1
 jedi==0.18.0
 jieba==0.42.1
 Jinja2==2.11.3
+jmespath==0.10.0
 joblib==1.0.1
 jpeg4py==0.1.4
 jsonschema==2.6.0
@@ -221,7 +229,7 @@ opt-einsum==3.3.0
 osqp==0.6.2.post0
 packaging==20.9
 palettable==3.3.0
-pandas==1.1.5
+pandas==1.1.4
 pandas-datareader==0.9.0
 pandas-gbq==0.13.3
 pandas-profiling==1.4.1
@@ -270,7 +278,7 @@ pyglet==1.5.0
 Pygments==2.6.1
 pygobject==3.26.1
 pymc3==3.7
-PyMeeus==0.5.2
+PyMeeus==0.5.9
 pymongo==3.11.3
 pymystem3==0.2.0
 pynndescent==0.5.2
@@ -287,6 +295,7 @@ python-dateutil==2.8.1
 python-louvain==0.15
 python-slugify==4.0.1
 python-utils==2.5.6
+pytorch-pretrained-bert==0.4.0
 pytz==2018.9
 pyviz-comms==2.0.1
 PyWavelets==1.1.1
@@ -302,26 +311,33 @@ resampy==0.2.2
 retrying==1.3.3
 rpy2==3.4.2
 rsa==4.7.2
+s3transfer==0.3.4
 sacremoses==0.0.43
 scikit-image==0.16.2
 scikit-learn==0.22.2.post1
 scikit-multilearn==0.2.0
-scipy==1.4.1
+scipy==1.6.1
 screen-resolution-extra==0.0.0
 scs==2.1.2
 seaborn==0.11.1
 Send2Trash==1.5.0
+sentencepiece==0.1.91
+sentry-sdk==1.0.0
+seqeval==1.2.2
 setuptools-git==1.2
 Shapely==1.7.1
+shortuuid==1.0.1
 simplegeneric==0.8.1
 six==1.15.0
 sklearn==0.0
 sklearn-pandas==1.8.0
 smart-open==4.2.0
+smmap==3.0.5
 snowballstemmer==2.1.0
 sortedcontainers==2.3.0
 SoundFile==0.10.3.post1
-spacy==2.2.4
+spacy==2.3.4
+sparse==0.11.2
 Sphinx==1.8.5
 sphinxcontrib-serializinghtml==1.1.4
 sphinxcontrib-websupport==1.2.4
@@ -329,12 +345,14 @@ SQLAlchemy==1.3.23
 sqlparse==0.4.1
 srsly==1.0.5
 statsmodels==0.10.2
+subprocess32==3.5.4
 sympy==1.7.1
 tables==3.4.4
 tabulate==0.8.9
 tblib==1.7.0
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.8.0
+tensorboardX==2.1
 tensorflow==2.4.1
 tensorflow-datasets==4.0.1
 tensorflow-estimator==2.4.0
@@ -349,19 +367,19 @@ text-unidecode==1.3
 textblob==0.15.3
 textgenrnn==1.4.1
 Theano==1.0.5
-thinc==7.4.0
-tifffile==2021.3.4
-tokenizers==0.10.1
+thinc==7.4.5
+tifffile==2021.3.5
+tokenizers==0.9.3
 toml==0.10.2
 toolz==0.11.1
-torch==1.8.0+cu101
+torch==1.7.1
 torchsummary==1.5.1
 torchtext==0.9.0
 torchvision==0.9.0+cu101
 tornado==5.1.1
 tqdm==4.41.1
 traitlets==5.0.5
-transformers==4.3.3
+transformers==3.5.1
 tweepy==3.10.0
 typeguard==2.7.1
 typing-extensions==3.7.4.3
@@ -370,7 +388,9 @@ umap-learn==0.5.1
 uritemplate==3.0.1
 urllib3==1.24.3
 vega-datasets==0.9.0
+wandb==0.10.11
 wasabi==0.8.2
+watchdog==2.0.2
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
